# name: TestFind.test[uvloop-None]
  <class 'dict'> {
    'documents': <class 'list'> [
      <class 'dict'> {
        'created_at': None,
        'id': 2,
        'name': 'test.fq.gz',
        'name_on_disk': None,
        'ready': False,
        'removed': False,
        'removed_at': None,
        'reserved': False,
        'size': None,
        'type': 'reference',
        'uploaded_at': None,
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'leeashley',
          'id': '7CtBo2yG',
        },
      },
      <class 'dict'> {
        'created_at': None,
        'id': 1,
        'name': 'test.fq.gz',
        'name_on_disk': None,
        'ready': False,
        'removed': False,
        'removed_at': None,
        'reserved': False,
        'size': None,
        'type': 'reads',
        'uploaded_at': None,
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'leeashley',
          'id': '7CtBo2yG',
        },
      },
      <class 'dict'> {
        'created_at': None,
        'id': 3,
        'name': 'test.fq.gz',
        'name_on_disk': None,
        'ready': False,
        'removed': False,
        'removed_at': None,
        'reserved': False,
        'size': None,
        'type': None,
        'uploaded_at': None,
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'johnsoncynthia',
          'id': 'LB1U6zCj',
        },
      },
    ],
  }
---
# name: TestFind.test[uvloop-reads]
  <class 'dict'> {
    'documents': <class 'list'> [
      <class 'dict'> {
        'created_at': None,
        'id': 1,
        'name': 'test.fq.gz',
        'name_on_disk': None,
        'ready': False,
        'removed': False,
        'removed_at': None,
        'reserved': False,
        'size': None,
        'type': 'reads',
        'uploaded_at': None,
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'leeashley',
          'id': '7CtBo2yG',
        },
      },
    ],
  }
---
# name: TestFind.test[uvloop-reference]
  <class 'dict'> {
    'documents': <class 'list'> [
      <class 'dict'> {
        'created_at': None,
        'id': 2,
        'name': 'test.fq.gz',
        'name_on_disk': None,
        'ready': False,
        'removed': False,
        'removed_at': None,
        'reserved': False,
        'size': None,
        'type': 'reference',
        'uploaded_at': None,
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'leeashley',
          'id': '7CtBo2yG',
        },
      },
    ],
  }
---
# name: TestUpload.test[uvloop-hmm]
  <class 'dict'> {
    'created_at': '2015-10-06T20:00:00Z',
    'id': 1,
    'name': 'Test.fq.gz',
    'name_on_disk': '1-Test.fq.gz',
    'ready': True,
    'removed': False,
    'removed_at': None,
    'reserved': False,
    'size': 9081,
    'type': 'hmm',
    'uploaded_at': '2015-10-06T20:00:00Z',
    'user': <class 'dict'> {
      'administrator': False,
      'handle': 'bob',
      'id': 'test',
    },
  }
---
# name: TestUpload.test[uvloop-reads]
  <class 'dict'> {
    'created_at': '2015-10-06T20:00:00Z',
    'id': 1,
    'name': 'Test.fq.gz',
    'name_on_disk': '1-Test.fq.gz',
    'ready': True,
    'removed': False,
    'removed_at': None,
    'reserved': False,
    'size': 9081,
    'type': 'reads',
    'uploaded_at': '2015-10-06T20:00:00Z',
    'user': <class 'dict'> {
      'administrator': False,
      'handle': 'bob',
      'id': 'test',
    },
  }
---
# name: TestUpload.test[uvloop-reference]
  <class 'dict'> {
    'created_at': '2015-10-06T20:00:00Z',
    'id': 1,
    'name': 'Test.fq.gz',
    'name_on_disk': '1-Test.fq.gz',
    'ready': True,
    'removed': False,
    'removed_at': None,
    'reserved': False,
    'size': 9081,
    'type': 'reference',
    'uploaded_at': '2015-10-06T20:00:00Z',
    'user': <class 'dict'> {
      'administrator': False,
      'handle': 'bob',
      'id': 'test',
    },
  }
---
# name: TestUpload.test[uvloop-subtraction]
  <class 'dict'> {
    'created_at': '2015-10-06T20:00:00Z',
    'id': 1,
    'name': 'Test.fq.gz',
    'name_on_disk': '1-Test.fq.gz',
    'ready': True,
    'removed': False,
    'removed_at': None,
    'reserved': False,
    'size': 9081,
    'type': 'subtraction',
    'uploaded_at': '2015-10-06T20:00:00Z',
    'user': <class 'dict'> {
      'administrator': False,
      'handle': 'bob',
      'id': 'test',
    },
  }
---
